// Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package org.lfdecentralizedtrust.splice.sv.store;

import "google/protobuf/struct.proto";
import "scalapb/scalapb.proto";

message ARC_DsoRules {
  string rules = 1;
}

message VoteRequestTxLogEntry {
  option (scalapb.message).extends = "org.lfdecentralizedtrust.splice.sv.store.TxLogEntry";
  option (scalapb.message).companion_extends = "org.lfdecentralizedtrust.splice.sv.store.TxLogEntry.TypeMappers";

  google.protobuf.Struct result = 1 [(scalapb.field).type = "org.lfdecentralizedtrust.splice.codegen.java.splice.dsorules.DsoRules_CloseVoteRequestResult"];
}

message ErrorTxLogEntry {
  option (scalapb.message).extends = "org.lfdecentralizedtrust.splice.sv.store.TxLogEntry";
  option (scalapb.message).companion_extends = "org.lfdecentralizedtrust.splice.store.TxLogStore.TxLogEntryTypeMappers";
}
